# german-municipality-selection

./: .gitignore  README.md  main.py  notebook.py  plot.py  pyproject.toml
notes/: .gitignore  main.tex
src/: adjust.py  caching.py  choose.py  commons.py  corr_factors.py  export.py  groups.py  letters.py  load.py  monitor.py  path.py  plot.py  probabilities.py  read.py  replacements.py  seed.py  select.py  selection.py  stats.py
