[tool.poetry]
name = "german-municipality-selection"
version = "0.1.0"
description = ""
authors = ["Philipp Verpoort <pcv@sortitionfoundation.org>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^2.0.0"
openpyxl = "^3.1.2"
voting = "^0.1.3"
plotly = "^5.14.0"
kaleido = "0.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
