[tool.poetry]
name = "german-municipality-selection"
package-mode = false
version = "0.1.0"
description = ""
authors = ["Philipp C. Verpoort <pcv@sortitionfoundation.org>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pandas = "^1.5.3"
openpyxl = "^3.1.2"
voting = "^0.1.3"
samplics = "^0.4.5"
requests = "^2.28.2"
plotly = "^5.14.0"
kaleido = "0.2.1"
jupytext = "^1.16.1"
jupyterlab = "^4.1.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
